Bug 1582016 - When text-underline-offset is `auto`, clamp the minimum used underline-offset to 1/16em. r=dholbert a=RyanVM

This is to avoid skip-ink problems with fonts that leave the OpenType field at zero,
which is unlikely to ever be what is really wanted. Authors can still avoid the clamp by
explicitly using text-underline-offset:from-font.

Differential Revision: https://phabricator.services.mozilla.com/D46268