layout/generic/nsTextFrame.cpp
@@ -5368,15 +5368,31 @@ static void SetWidthIfLength(
 // https://drafts.csswg.org/css-text-decor-4/#underline-offset
 // params.defaultLineThickness should be set before calling
 // this function
+// On entry, aParams.offset is already initialized with the underlineOffset
+// from the font; this function may adjust it as appropriate.
 static void SetOffsetIfLength(const StyleTextDecorationLength& aOffset,
                               nsCSSRendering::DecorationRectParams& aParams,
+                              const gfxFont::Metrics& aFontMetrics,
                               const gfxFloat aAppUnitsPerDevPixel,
                               bool aIsSideways, bool aRightUnderline) {
-  // auto is from-font (the automatic offset is derived from font metrics) so we
-  // don't change the value unless it is a length
-  if (!aOffset.IsLength()) {
+  // `auto` is treated like `from-font`, except that (for horizontal/sideways
+  // text) we clamp the offset to a minimum of 1/16 em (equivalent to 1px at
+  // font-size 16px) to mitigate skip-ink issues with fonts that leave the
+  // underlineOffset field as zero.
+  if (aOffset.IsAuto()) {
+    if (!aParams.vertical || aIsSideways) {
+      aParams.offset =
+          std::min(aParams.offset, gfx::Float(-aFontMetrics.emHeight / 16.0));
+    }
     return;
   }
+
+  // If the value is `from-font`, just leave the font's value untouched.
+  if (aOffset.IsFromFont()) {
+    return;
+  }
+
+  MOZ_ASSERT(aOffset.IsLength(), "unexpected value type!");
 
   if (aParams.vertical && !aIsSideways &&
       aParams.decoration == StyleTextDecorationLine_UNDERLINE) {
@@ -5535,7 +5551,7 @@ void nsTextFrame::UnionAdditionalOverflow(nsPresContext* aPresContext,
             bool swapUnderline = verticalDec && IsUnderlineRight(this);
             if (swapUnderline ? lineType == StyleTextDecorationLine_OVERLINE
                               : lineType == StyleTextDecorationLine_UNDERLINE) {
-              SetOffsetIfLength(dec.mTextUnderlineOffset, params,
+              SetOffsetIfLength(dec.mTextUnderlineOffset, params, metrics,
                                 appUnitsPerDevUnit, parentWM.IsSideways(),
                                 swapUnderline);
             }
@@ -5754,7 +5770,8 @@ void nsTextFrame::DrawSelectionDecorations(
         WritingMode wm = GetWritingMode();
         params.offset = aFontMetrics.underlineOffset;
         SetOffsetIfLength(StyleText()->mTextUnderlineOffset, params,
-                          appUnitsPerDevPixel, wm.IsSideways(), swapUnderline);
+                          aFontMetrics, appUnitsPerDevPixel, wm.IsSideways(),
+                          swapUnderline);
       } else {
         params.offset = aFontMetrics.maxAscent;
       }
@@ -7038,7 +7055,7 @@ void nsTextFrame::DrawTextRunAndDecorations(
     bool swapUnderline = verticalDec && IsUnderlineRight(this);
     if (swapUnderline ? lineType == StyleTextDecorationLine_OVERLINE
                       : lineType == StyleTextDecorationLine_UNDERLINE) {
-      SetOffsetIfLength(dec.mTextUnderlineOffset, params,
+      SetOffsetIfLength(dec.mTextUnderlineOffset, params, metrics,
                         PresContext()->AppUnitsPerDevPixel(), wm.IsSideways(),
                         swapUnderline);
     }
@@ -7391,7 +7408,7 @@ bool nsTextFrame::CombineSelectionUnderlineRect(nsPresContext* aPresContext,
 
     bool swapUnderline = verticalRun && IsUnderlineRight(this);
     if (swapUnderline ? textDecs.HasOverline() : textDecs.HasUnderline()) {
-      SetOffsetIfLength(StyleText()->mTextUnderlineOffset, params,
+      SetOffsetIfLength(StyleText()->mTextUnderlineOffset, params, metrics,
                         aPresContext->AppUnitsPerDevPixel(), wm.IsSideways(),
                         swapUnderline);
     }
